# db-paper-explainer

./: .gitignore  CLAUDE.md  LICENSE  README.md  STYLE.md
.claude/agents/: lab-reviewer.md  paper-practitioner.md  pass-builder.md  pass-reviewer.md
aws-aurora/: Aurora PostgreSQL Limitless Database.epub  CLAUDE.md  pass-0-map.md  pass-1-data-model-architecture.md  pass-2-time-based-mvcc.md  pass-3-distributed-commit.md  pass-4-adaptive-scaling.md  pass-5-query-pushdown.md  pass-6-failover-and-claims.md
fastlanes/: The FastLanes Compression Layout.epub  pass-0-map.md  pass-1-components.md  pass-2-mechanics.md  pass-3-pushdown.md  pass-4-other-codecs.md  pass-5-encoder.md  pass-6-evaluating-claims.md
pdf-to-epub/: .gitignore  README.md  pyproject.toml
pdf-to-epub/docs/plans/: 2026-05-10-001-feat-pdf-to-epub-converter-plan.md
pdf-to-epub/src/paper_reader/: __main__.py  classifier.py  cli.py  epub_builder.py  headers_footers.py  layout.py  pipeline.py  rasterizer.py  text.py
pdf-to-epub/tests/: conftest.py  test_classifier.py  test_cli.py  test_epub_builder.py  test_headers_footers.py  test_integration.py  test_layout.py  test_rasterizer.py  test_text.py
