[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reader"
version = "0.1.0"
description = "Convert 2-column scientific PDFs into reflowable EPUB files for comfortable iPad reading."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kirill Kuts" }]
dependencies = [
    "pymupdf>=1.24",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
paper-reader = "paper_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
